@@ -23,11 +23,11 @@ public class ImageFileService {
 	@Transactional(readOnly = true)
 	public PagedResponse<ImageFileResponse> findAll(PagedRequest pagedRequest) {
 		var                            safePage   = Math.max(0, pagedRequest.getPage());
-		var                            safeSize   = Math.min(Math.max(pagedRequest.getSize(), 1), 200);
+		var safeSize   = Math.clamp(pagedRequest.getSize(), 1, 200);
 		var                            sort       = FileSearchHelper.buildSort(pagedRequest.getSortBy(), pagedRequest.getDirection());
 		Specification<ImageFileEntity> spec       = FileSearchHelper.buildSpecification(pagedRequest.getSearch(), Boolean.TRUE.equals(pagedRequest.getCaseSensitive()));
 		var pageable = PageRequest.of(safePage, safeSize, sort);
-		var                            pageResult = imageFileRepository.findAll(spec, pageable);
+		var pageResult = imageFileRepository.findAllWithRelationships(spec, pageable);
 		var content = pageResult.getContent()
 		                        .stream()
 		                        .map(ImageFileEntity::toResponse)
